organized image asset folders in a more logical manner; updated focus and hover styles for nav menu items; improved spacing of menu items on mobile; organized menu styles and removed redundant styles; separated nav menu styles into separate style sheet; ensured all image and style sheet paths within html and css files are up to date with file organization changes

--- a/styles/home-page-styles.css
+++ b/styles/home-page-styles.css
@@ -6,7 +6,7 @@ HOME PAGE STYLING
 
 @keyframes skeletonLoading {
   0% {
-    background-image: url(../images/badlands-brigade-presents.gif);
+    background-image: url(../images/project-logos/badlands-brigade-presents.gif);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -113,92 +113,3 @@ a {
   text-shadow: black;
 }
 
-
-/*
------------------
-NAV DEFAULTS
------------------
-*/
-header.main-nav{
-  /*#0e1f27; 565473, alt colour #544E7A or 68668C*/
-    padding-top: 0.5rem;
-    transition: padding-left 0.1s ease-in-out;
-    display: flex; /* keep the h1 tag on the left and the main nav on the right */
-    justify-content: right;
-    align-items: center;
-}
-.site-logo { 
-  display: flex; /*puts image and title side by side*/
-  align-items: center; /*distributes them along the centre of the horizontal axis*/
-  /*I couldn't figure out why using this selector wasn't working to display the logo and title side by side, until I realized that I needed to apply display: flex to the <a> element instead of the <div> since THAT'S what directly wraps the <img> and <h1> elements. I moved class="site-logo" to <a> instead of the wrapping div and that solved my problem lol*/
-  padding-left: 1rem;
-}
-@media (width < 42.5em) {
-  .site-logo {
-    padding-left: 0.25rem;
-    transition: padding-left 0.1s ease-in-out;
-  }
-}
-.main-nav a {
-  color: #F5E9E9;
-}
-button {
-  background: none;
-  border: none;
-  padding: 1rem;
-  margin-right: 17px;
-}
-button:focus {
-  background-color: #f5e9e92a;
-}
-.main-nav-open[aria-expanded="true"]{ /*targets open position of menu; [] needs to be directly adjacent lol*/
-  + .main-nav-menu {
-    translate: 0; /* When aria expanded=true, clicking the main nav open button will bring the main nav menu back on screen */
-    transition: translate 0.5s ease-in-out;
-  }
-}
-.main-nav-open[aria-expanded="false"]{ /*targets open position of menu; [] needs to be directly adjacent lol*/
-  + .main-nav-menu {
-    translate: 100vw; 
-    transition: translate 0.5s ease-in-out;
-  }
-}
-.main-nav-menu { /* makes menu card*/
-  font-family: Anaheim, Arial, Helvetica, sans-serif;
-  background: #ec5147;      
-  position: fixed;
-  inset: 0;
-  padding-block: 0.5rem;
-  translate: 100vw;
-  transition: translate 0.2s ease-in-out;
-}
-button.main-nav-close {
-  display: block;
-  margin-inline-start: auto;
-  margin-right: 17px;
-}
-.main-nav-links { /* removes default list styling, styles nav-links in a row */
-  list-style: none;
-  display: flex; 
-  gap: 1rem;
-  align-items: center;
-  flex-direction: column;
-  font-size: 2rem;
-  margin-top: 8rem;
-}
-@media (orientation: landscape) and (width < 62em) {
-  .main-nav-links {
-    margin-top: 1rem;
-    font-size: 1.5rem;
-    gap: 0.5rem;
-  }
-}
-.main-nav-item img {
-  max-width: 100%;
-  height: auto;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-nav.sub-nav {
-  padding-top: 0.5rem;
-}
